clusters/homelab/apps/translate/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: translate
  labels:
    gateway.infra.services/allow-routes: "true"
