clusters/homelab/apps/translate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libretranslate
  namespace: translate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1032
        runAsGroup: 1032
        fsGroup: 1032
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: libretranslate
          image: libretranslate/libretranslate:v1.9.6
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 125m
              memory: 2Gi
            limits:
              cpu: 1500m
              memory: 3Gi
          volumeMounts:
            - name: data
              mountPath: /home/libretranslate/.local
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: libretranslate-data
