clusters/homelab/apps/translate/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: libretranslate
  namespace: translate
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames:
    - "translate.klimlive.de"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: libretranslate
          port: 5000
